src/objects/Other_Accounts_part_of_the_Account_Plan__c.object
<CustomObject>
    <description>Object created to be able to capture information about secondary Accounts being part of an Account Plan, to set up features to not having do do an Account Plan for Accounts already part of another Account Plan.</description>
    <fields>
        <fullName>Account_Part_of_the_Account_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Part of the Account Plan</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Other_Accounts_part_of_the_Account_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Stage__c</fullName>
        <formula>TEXT(Account_Plan__r.StageName)</formula>
        <label>Account Plan Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Other_Accounts_part_of_the_Account_Plan</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Relation_to_Account_Plan_Description__c</fullName>
        <label>Relation to Account Plan Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Account Plan Relation</label>
    <nameField>
        <displayFormat>GROW/KEEP AP - {00000}</displayFormat>
        <label>Account Plan Relations</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>